Adaptive design done

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 		<title>WebStudio</title>
@@ -13,28 +14,42 @@
 		<link rel="stylesheet" href="css/main.min.css" />
 	</head>
 
-	<body><!-- Header with links section-->
-	<header class="header">
-		<div class="container container--flex container--center">
-			<a href="./index.html" class="logo">Web<span class="logo__part2">Studio</span></a>
-			<nav class="header-nav">
-				<ul class="header-nav__list">
-					<li class="header-nav__item"><a class="header-nav__link" href="./index.html">Студия</a></li>
-					<li class="header-nav__item"><a class="header-nav__link header-nav__link--selected" href="./portfolio.html">Портфолио</a></li>
-					<li class="header-nav__item"><a class="header-nav__link" href="#">Контакты</a></li>
-				</ul>
-			</nav>
-			<div class="header-address">
-				<a class="header-address__link" href="mailto:info@devstudio.com"><svg class="header-address__icon" height="10"
-						width="16">
-						<use href="./images/sprite.svg#email"></use>
-					</svg>info@devstudio.com</a>
-				<a class="header-address__link" href="tel:+380961111111"><svg class="header-address__icon" height="16" width="12">
-						<use href="./images/sprite.svg#phone"></use>
-					</svg>+38 096 111 11 11</a>
+	<body>
+		<!-- Header with links section-->
+		<header class="header">
+			<div class="container header__container">
+				<a href="./index.html" class="logo header__logo">Web<span class="logo__part2">Studio</span></a>
+				<div class="header-menu" data-menu>
+					<nav class="header-nav">
+						<ul class="header-nav__list">
+							<li class="header-nav__item"><a class="header-nav__link" href="./index.html">Студия</a></li>
+							<li class="header-nav__item"><a class="header-nav__link header-nav__link--selected" href="./portfolio.html">Портфолио</a></li>
+							<li class="header-nav__item"><a class="header-nav__link" href="#">Контакты</a></li>
+						</ul>
+					</nav>
+					<div class="header-address">
+						<a class="header-address__link" href="mailto:info@devstudio.com"><svg class="header-address__icon" height="10" width="16">
+								<use href="./images/sprite.svg#email"></use>
+							</svg>info@devstudio.com</a>
+						<a class="header-address__link header-address__link--big-blue" href="tel:+380961111111"><svg class="header-address__icon" height="16" width="12">
+								<use href="./images/sprite.svg#phone"></use>
+							</svg>+38 096 111 11 11</a>
+					</div>
+					<ul class="header-social">
+						<li class="header-social__item"><a class="header-social__link" href="">Instagram</a></li>
+						<li class="header-social__item"><a class="header-social__link" href="">Twitter</a></li>
+						<li class="header-social__item"><a class="header-social__link" href="">Facebook</a></li>
+						<li class="header-social__item"><a class="header-social__link" href="">LinkedIn</a></li>
+					</ul>
+				</div>
+				<button class="header-button" type="button" data-menu-button>
+					<svg class="icon" width="40" height="40">
+						<use class="header-button__open" href="./images/sprite.svg#menu"></use>
+						<use class="header-button__close" href="./images/sprite.svg#close40"></use>
+					</svg>
+				</button>
 			</div>
-		</div>
-	</header>
+		</header>
 
 		<!-- Section of main content -->
 		<main>
@@ -54,65 +69,101 @@
 
 				<!-- Portfolio list content -->
 				<ul class="portfolio">
-					<li>
+					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/technoquack.jpg" alt="Технокряк" width="370" height="294" />
+							<picture>
+								<source media="(min-width:1200px)" srcset="./images/portfolio/technoquack/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/technoquack/354.jpg">
+								<img src="./images/portfolio/technoquack/450.jpg" alt="Технокряк" />
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Технокряк</h2><p class="portfolio__type">Веб-сайт</p></div>
 						</a>
 					</li>
-					<li>
-						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/neworleans-vs-goldenstar.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+					<li class="portfolio__item">
+						<a class="portfolio__link" href="">							
+							<picture>
+								<source media="(min-width:1200px)" srcset="./images/portfolio/neworleans-vs-goldenstar/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/neworleans-vs-goldenstar/354.jpg">
+								<img src="./images/portfolio/neworleans-vs-goldenstar/450.jpg" alt="Постер New Orlean vs Golden Star">
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Постер New Orlean vs Golden Star</h2><p class="portfolio__type">Дизайн</p></div>
 						</a>
 					</li>
-					<li>
+					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/seafood.jpg" alt="Ресторан Seafood" width="370" height="294" />
+							<picture>
+								<source media="(min-width:1200px)" srcset="./images/portfolio/seafood/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/seafood/354.jpg">
+								<img src="./images/portfolio/seafood/450.jpg" alt="Ресторан Seafood" />
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Ресторан Seafood</h2><p class="portfolio__type">Приложение</p></div>
 						</a>
 					</li>
-					<li>
+					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/prime.jpg" alt="Проект Prime" width="370" height="294" />
+							<picture class="portfolio__image">
+								<source media="(min-width:1200px)" srcset="./images/portfolio/prime/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/prime/354.jpg">
+								<img src="./images/portfolio/prime/450.jpg" alt="Проект Prime" />
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Проект Prime</h2><p class="portfolio__type">Маркетинг</p></div>
 						</a>
 					</li>
-					<li>
+					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/boxes.jpg" alt="Проект Boxes" width="370" height="294" />
+							<picture>
+								<source media="(min-width:1200px)" srcset="./images/portfolio/boxes/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/boxes/354.jpg">
+								<img src="./images/portfolio/boxes/450.jpg" alt="Проект Boxes" />
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Проект Boxes</h2><p class="portfolio__type">Приложение</p></div>
 						</a>
 					</li>
-					<li>
+					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/inspiration.jpg" alt="Inspiration has no Borders" width="370" height="294" />
+							<picture>
+								<source media="(min-width:1200px)" srcset="./images/portfolio/inspiration/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/inspiration/354.jpg">
+								<img src="./images/portfolio/inspiration/450.jpg" alt="Inspiration has no Borders" />
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Inspiration has no Borders</h2><p class="portfolio__type">Веб-сайт</p></div>
 						</a>
 					</li>
-					<li>
+					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/limitededition.jpg" alt="Издание Limited Edition" width="370" height="294" />
+							<picture>
+								<source media="(min-width:1200px)" srcset="./images/portfolio/limitededition/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/limitededition/354.jpg">
+								<img src="./images/portfolio/limitededition/450.jpg" alt="Издание Limited Edition" />
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Издание Limited Edition</h2><p class="portfolio__type">Дизайн</p></div>
 						</a>
 					</li>
-					<li>
+					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/lab.jpg" alt="Проект LAB" width="370" height="294" />
+							<picture>
+								<source media="(min-width:1200px)" srcset="./images/portfolio/lab/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/lab/354.jpg">
+								<img src="./images/portfolio/lab/450.jpg" alt="Проект LAB" />
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Проект LAB</h2><p class="portfolio__type">Маркетинг</p></div>
 						</a>
 					</li>
-					<li>
+					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<img src="./images/portfolio/growingbusiness.jpg" alt="Growing business" width="370" height="294" />
+							<picture>
+								<source media="(min-width:1200px)" srcset="./images/portfolio/growingbusiness/370.jpg">
+								<source media="(min-width: 768px)" srcset="./images/portfolio/growingbusiness/354.jpg">
+								<img src="./images/portfolio/growingbusiness/450.jpg" alt="Growing business" />
+							</picture>
 							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Growing business</h2><p class="portfolio__type">Приложение</p></div>
 						</a>
@@ -123,9 +174,9 @@
 
 		<!-- Footer section -->
 		<footer class="footer">
-			<div class="container container--flex">
+			<div class="container footer__container">
 
-        <!-- Addresses -->
+				<!-- Addresses -->
 				<div class="footer-address">
 					<a href="./index.html" class="logo">Web<span class="footer-address__logo">Studio</span></a>
 					<address class="footer-address__text">г. Киев, пр-т Леси Украинки, 26</address>
@@ -133,26 +184,38 @@
 					<a class="footer-address__link" href="tel:+380961111111">+38 096 111 11 11</a>
 				</div>
 
-        <!-- Social Join -->
+				<!-- Social Join -->
 				<div class="footer-joinus">
 					<h3 class="footer-joinus__title">Присоединяйтесь</h3>
 					<ul class="contact-list">
-						<li class="contact"><a class="contact__link contact__link--footer-style" href=""><svg class="icon" width="44" height="44"><use href="./images/sprite.svg#instagram"></use></svg></a></li>
-						<li class="contact"><a class="contact__link contact__link--footer-style" href=""><svg class="icon" width="44" height="44"><use href="./images/sprite.svg#twitter"></use></svg></a></li>
-						<li class="contact"><a class="contact__link contact__link--footer-style" href=""><svg class="icon" width="44" height="44"><use href="./images/sprite.svg#facebook"></use></svg></a></li>
-						<li class="contact"><a class="contact__link contact__link--footer-style" href=""><svg class="icon" width="44" height="44"><use href="./images/sprite.svg#linkedin"></use></svg></a></li>
+						<li class="contact"><a class="contact__link contact__link--footer-style" href=""><svg class="icon" width="44" height="44">
+									<use href="./images/sprite.svg#instagram"></use>
+								</svg></a></li>
+						<li class="contact"><a class="contact__link contact__link--footer-style" href=""><svg class="icon" width="44" height="44">
+									<use href="./images/sprite.svg#twitter"></use>
+								</svg></a></li>
+						<li class="contact"><a class="contact__link contact__link--footer-style" href=""><svg class="icon" width="44" height="44">
+									<use href="./images/sprite.svg#facebook"></use>
+								</svg></a></li>
+						<li class="contact"><a class="contact__link contact__link--footer-style" href=""><svg class="icon" width="44" height="44">
+									<use href="./images/sprite.svg#linkedin"></use>
+								</svg></a></li>
 					</ul>
 				</div>
 
-        <!-- Signup form -->
+				<!-- Signup form -->
 				<div class="footer-signup">
 					<h3 class="footer-signup__title">Подпишитесь на рассылку</h3>
 					<form class="form-signup">
 						<input class="form-signup__input" type="email" placeholder="Email" />
-						<button class="button" type="submit">Подписаться<svg class="icon form-signup__icon" width="24" height="24"><use href="./images/sprite.svg#form-send"></use></svg></button>
+						<button class="button" type="submit">Подписаться<svg class="icon form-signup__icon" width="24" height="24">
+								<use href="./images/sprite.svg#form-send"></use>
+							</svg></button>
 					</form>
 				</div>
 			</div>
 		</footer>
+
+		<script src="./js/menu.js"></script>
 	</body>
 </html>
