--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
 					<h2 class="section__header">Наша команда</h2>
 					<ul class="card-list team-member__list">
 						<li class="team-member">
-							<img class="team-member__photo" src="images/ourteam/idemyanenko/270.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+							<picture class="team-member__photo">
+								<source media="(min-width:1200px)" srcset="./images/ourteam/idemyanenko/270.jpg">
+								<source media="(min-width: 768px)" srcset="./images/ourteam/idemyanenko/354.jpg">
+								<img src="./images/ourteam/idemyanenko/450.jpg" alt="Игорь Демьяненко" />
+							</picture>
+							<!-- <img class="team-member__photo" src="images/ourteam/idemyanenko/270.jpg" alt="Игорь Демьяненко" width="270" height="260" /> -->
 							<h3 class="team-member__name">Игорь Демьяненко</h3>
 							<p class="team-member__position">Product Designer</p>
 							<ul class="contact-list">
@@ -158,7 +163,11 @@
 						</li>
 
 						<li class="team-member">
-							<img class="team-member__photo" src="images/ourteam/orepina/270.jpg" alt="Ольга Репина" width="270" height="260" />
+							<picture class="team-member__photo">
+								<source media="(min-width:1200px)" srcset="./images//ourteam/orepina/270.jpg">
+								<source media="(min-width: 768px)" srcset="./images/ourteam/orepina/354.jpg">
+								<img src="./images/ourteam/orepina/450.jpg" alt="Ольга Репина" />
+							</picture>
 							<h3 class="team-member__name">Ольга Репина</h3>
 							<p class="team-member__position">Frontend Developer</p>
 							<ul class="contact-list">
@@ -178,7 +187,11 @@
 						</li>
 
 						<li class="team-member">
-							<img class="team-member__photo" src="images/ourteam/ntarasov/270.jpg" alt="Николай Тарасов" width="270" height="260" />
+							<picture class="team-member__photo">
+								<source media="(min-width:1200px)" srcset="./images//ourteam/ntarasov/270.jpg">
+								<source media="(min-width: 768px)" srcset="./images/ourteam/ntarasov/354.jpg">
+								<img src="./images/ourteam/ntarasov/450.jpg" alt="Николай Тарасов" />
+							</picture>
 							<h3 class="team-member__name">Николай Тарасов</h3>
 							<p class="team-member__position">Marketing</p>
 							<ul class="contact-list">
@@ -198,7 +211,11 @@
 						</li>
 
 						<li class="team-member">
-							<img class="team-member__photo" src="images/ourteam/mermakov/270.jpg" alt="Михаил Ермаков" width="270" height="260" />
+							<picture class="team-member__photo">
+								<source media="(min-width:1200px)" srcset="./images//ourteam/mermakov/270.jpg">
+								<source media="(min-width: 768px)" srcset="./images/ourteam/mermakov/354.jpg">
+								<img src="./images/ourteam/mermakov/450.jpg" alt="Михаил Ермаков" />
+							</picture>
 							<h3 class="team-member__name">Михаил Ермаков</h3>
 							<p class="team-member__position">UI Designer</p>
 							<ul class="contact-list">
