more adaptive fixes

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,100 +71,118 @@
 				<ul class="portfolio">
 					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<picture>
-								<source media="(min-width:1200px)" srcset="./images/portfolio/technoquack/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/technoquack/354.jpg">
-								<img src="./images/portfolio/technoquack/450.jpg" alt="Технокряк" />
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/technoquack/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/technoquack/354.jpg">
+									<img src="./images/portfolio/technoquack/450.jpg" alt="Технокряк" />
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Технокряк</h2><p class="portfolio__type">Веб-сайт</p></div>
 						</a>
 					</li>
 					<li class="portfolio__item">
-						<a class="portfolio__link" href="">							
-							<picture>
-								<source media="(min-width:1200px)" srcset="./images/portfolio/neworleans-vs-goldenstar/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/neworleans-vs-goldenstar/354.jpg">
-								<img src="./images/portfolio/neworleans-vs-goldenstar/450.jpg" alt="Постер New Orlean vs Golden Star">
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+						<a class="portfolio__link" href="">
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/neworleans-vs-goldenstar/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/neworleans-vs-goldenstar/354.jpg">
+									<img src="./images/portfolio/neworleans-vs-goldenstar/450.jpg" alt="Постер New Orlean vs Golden Star">
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Постер New Orlean vs Golden Star</h2><p class="portfolio__type">Дизайн</p></div>
 						</a>
 					</li>
 					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<picture>
-								<source media="(min-width:1200px)" srcset="./images/portfolio/seafood/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/seafood/354.jpg">
-								<img src="./images/portfolio/seafood/450.jpg" alt="Ресторан Seafood" />
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/seafood/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/seafood/354.jpg">
+									<img src="./images/portfolio/seafood/450.jpg" alt="Ресторан Seafood" />
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Ресторан Seafood</h2><p class="portfolio__type">Приложение</p></div>
 						</a>
 					</li>
 					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<picture class="portfolio__image">
-								<source media="(min-width:1200px)" srcset="./images/portfolio/prime/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/prime/354.jpg">
-								<img src="./images/portfolio/prime/450.jpg" alt="Проект Prime" />
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/prime/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/prime/354.jpg">
+									<img src="./images/portfolio/prime/450.jpg" alt="Проект Prime" />
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Проект Prime</h2><p class="portfolio__type">Маркетинг</p></div>
 						</a>
 					</li>
 					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<picture>
-								<source media="(min-width:1200px)" srcset="./images/portfolio/boxes/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/boxes/354.jpg">
-								<img src="./images/portfolio/boxes/450.jpg" alt="Проект Boxes" />
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/boxes/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/boxes/354.jpg">
+									<img src="./images/portfolio/boxes/450.jpg" alt="Проект Boxes" />
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Проект Boxes</h2><p class="portfolio__type">Приложение</p></div>
 						</a>
 					</li>
 					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<picture>
-								<source media="(min-width:1200px)" srcset="./images/portfolio/inspiration/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/inspiration/354.jpg">
-								<img src="./images/portfolio/inspiration/450.jpg" alt="Inspiration has no Borders" />
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/inspiration/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/inspiration/354.jpg">
+									<img src="./images/portfolio/inspiration/450.jpg" alt="Inspiration has no Borders" />
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Inspiration has no Borders</h2><p class="portfolio__type">Веб-сайт</p></div>
 						</a>
 					</li>
 					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<picture>
-								<source media="(min-width:1200px)" srcset="./images/portfolio/limitededition/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/limitededition/354.jpg">
-								<img src="./images/portfolio/limitededition/450.jpg" alt="Издание Limited Edition" />
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/limitededition/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/limitededition/354.jpg">
+									<img src="./images/portfolio/limitededition/450.jpg" alt="Издание Limited Edition" />
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Издание Limited Edition</h2><p class="portfolio__type">Дизайн</p></div>
 						</a>
 					</li>
 					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<picture>
-								<source media="(min-width:1200px)" srcset="./images/portfolio/lab/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/lab/354.jpg">
-								<img src="./images/portfolio/lab/450.jpg" alt="Проект LAB" />
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/lab/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/lab/354.jpg">
+									<img src="./images/portfolio/lab/450.jpg" alt="Проект LAB" />
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Проект LAB</h2><p class="portfolio__type">Маркетинг</p></div>
 						</a>
 					</li>
 					<li class="portfolio__item">
 						<a class="portfolio__link" href="">
-							<picture>
-								<source media="(min-width:1200px)" srcset="./images/portfolio/growingbusiness/370.jpg">
-								<source media="(min-width: 768px)" srcset="./images/portfolio/growingbusiness/354.jpg">
-								<img src="./images/portfolio/growingbusiness/450.jpg" alt="Growing business" />
-							</picture>
-							<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							<div class="portfolio__text-container">
+								<picture class="portfolio__image">
+									<source media="(min-width:1200px)" srcset="./images/portfolio/growingbusiness/370.jpg">
+									<source media="(min-width: 768px)" srcset="./images/portfolio/growingbusiness/354.jpg">
+									<img src="./images/portfolio/growingbusiness/450.jpg" alt="Growing business" />
+								</picture>
+								<div class="portfolio__text"><p class="portfolio__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur labore consectetur eos praesentium tempora perferendis accusantium incidunt itaque optio aliquam quasi sunt facilis neque cumque, a ratione quos voluptate reiciendis voluptates ad rem. Fugit et quod voluptas fuga placeat officiis! Velit doloribus odio modi pariatur blanditiis ab deserunt rerum tempore.</p></div>
+							</div>
 							<div class="portfolio__meta"><h2 class="portfolio__title">Growing business</h2><p class="portfolio__type">Приложение</p></div>
 						</a>
 					</li>
