add webp in index section

--- a/index.html
+++ b/index.html
@@ -119,53 +119,80 @@
 					<ul class="card-list specialization__list">
 						<li class="specialization">
 							<!-- <img class="specialization__icon" src="images/whatwedo/whatwedo1.jpg" alt="Example 1" width="370" height="294" /> -->
-							<img
-								srcset="
-									./images/whatwedo/whatwedo1/img.jpg   370w,
-									./images/whatwedo/whatwedo1/img@1,5x.jpg 556w,
-									./images/whatwedo/whatwedo1/img@2x.jpg  740w,
-									./images/whatwedo/whatwedo1/img@3x.jpg  1110w"
-								sizes="370px"
-								src="./images/whatwedo/whatwedo1/img.jpg" 
-								alt="What we do 1"
-								width="370"
-								height="294"
-								loading="lazy"
-							/>
+							<picture>
+								<source
+									srcset="
+										./images/whatwedo/whatwedo1/img.webp,
+										./images/whatwedo/whatwedo1/img@2x.webp 2x,
+										./images/whatwedo/whatwedo1/img@3x.webp 3x"
+									type="image/webp"
+								/>
+								<source
+									srcset="
+										./images/whatwedo/whatwedo1/img.jpg,
+										./images/whatwedo/whatwedo1/img@2x.jpg 2x,
+										./images/whatwedo/whatwedo1/img@3x.jpg 3x"
+								/>
+								<img
+									src="./images/whatwedo/whatwedo1/img.jpg" 
+									alt="What we do 1"
+									width="370"
+									height="294"
+									loading="lazy"
+								/>
+							</picture>
 							<div class="specialization__title">Десктопные приложения</div>
 						</li>
 						<li class="specialization">
 							<!-- <img class="specialization__icon" src="images/whatwedo/whatwedo2.jpg" alt="Example 2" width="370" height="294" /> -->
-							<img
-								srcset="
-									./images/whatwedo/whatwedo2/img.jpg   370w,
-									./images/whatwedo/whatwedo2/img@1,5x.jpg 556w,
-									./images/whatwedo/whatwedo2/img@2x.jpg  740w,
-									./images/whatwedo/whatwedo2/img@3x.jpg  1110w"
-								sizes="370px"
-								src="./images/whatwedo/whatwedo2/img.jpg" 
-								alt="What we do 2"
-								width="370"
-								height="294"
-								loading="lazy"
-							/>
+							<picture>
+								<source
+									srcset="
+										./images/whatwedo/whatwedo2/img.webp,
+										./images/whatwedo/whatwedo2/img@2x.webp 2x,
+										./images/whatwedo/whatwedo2/img@3x.webp 3x"
+									type="image/webp"
+								/>
+								<source
+									srcset="
+										./images/whatwedo/whatwedo2/img.jpg,
+										./images/whatwedo/whatwedo2/img@2x.jpg 2x,
+										./images/whatwedo/whatwedo2/img@3x.jpg 3x"
+								/>
+								<img
+									src="./images/whatwedo/whatwedo2/img.jpg" 
+									alt="What we do 1"
+									width="370"
+									height="294"
+									loading="lazy"
+								/>
+							</picture>
 							<div class="specialization__title">Мобильные приложения</div>
 						</li>
 						<li class="specialization">
 							<!-- <img class="specialization__icon" src="images/whatwedo/whatwedo3.jpg" alt="Example 3" width="370" height="294" /> -->
-							<img
-								srcset="
-									./images/whatwedo/whatwedo3/img.jpg   370w,
-									./images/whatwedo/whatwedo3/img@1,5x.jpg 556w,
-									./images/whatwedo/whatwedo3/img@2x.jpg  740w,
-									./images/whatwedo/whatwedo3/img@3x.jpg  1110w"
-								sizes="370px"
-								src="./images/whatwedo/whatwedo3/img.jpg" 
-								alt="What we do 3"
-								width="370"
-								height="294"
-								loading="lazy"
-							/>
+							<picture>
+								<source
+									srcset="
+										./images/whatwedo/whatwedo3/img.webp,
+										./images/whatwedo/whatwedo3/img@2x.webp 2x,
+										./images/whatwedo/whatwedo3/img@3x.webp 3x"
+									type="image/webp"
+								/>
+								<source
+									srcset="
+										./images/whatwedo/whatwedo3/img.jpg,
+										./images/whatwedo/whatwedo3/img@2x.jpg 2x,
+										./images/whatwedo/whatwedo3/img@3x.jpg 3x"
+								/>
+								<img
+									src="./images/whatwedo/whatwedo3/img.jpg" 
+									alt="What we do 1"
+									width="370"
+									height="294"
+									loading="lazy"
+								/>
+							</picture>
 							<div class="specialization__title">Дизайнерские решения</div>
 						</li>
 					</ul>
